@@ -1,11 +1,0 @@
-AuthName "AuthName"
-	AuthType Digest
-	AuthDigestProvider file
-	AuthUserFile /home/www/pathtositeroot/users/digest
-	require valid-user
-
-DirectoryIndex index.php
-
-<IfModule mod_rewrite.c>
-    RewriteEngine Off
-</IfModule>
